--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -26,11 +26,11 @@ jobs:
     needs: [run_pub_tests]
     runs-on: [ubuntu-latest]
     env:
-      LOGIN: ${{ secrets.DOCKER_LOGIN }}
+      LOGIN: ${{ secrets.DOCKER_USER }}
       NAME: ${{ secrets.DOCKER_NAME }}
     steps:
       - name: Login to docker.io
-        run:  echo ${{ secrets.DOCKER_PWD }} | docker login --username ${{ secrets.DOCKER_LOGIN }} --password-stdin
+        run:  echo ${{ secrets.DOCKER_PASS }} | docker login --username ${{ secrets.DOCKER_USER }} --password-stdin
       - uses: actions/checkout@master
       - name: Build image
         run: docker build -t $LOGIN/$NAME:${GITHUB_REF:10} -f Dockerfile .
